modificaciones de css

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
+
+
 h1{
+    text-align:center;
+}
+h2{
     color: red
 }
-#titulo-principal
-p{
-    color:green
-}
-.parrafo{
-    color:orange
-}
-.secundario{
-    font-size: 18px;
-}
+
+
+
+
